<resources>
    <string name="app_name">Di-Educate</string>

    <string name="bnew_session">Iniciar Sesión</string>
    <string name="bnew_account">Cuenta Nueva</string>
    <string name="bstart">Iniciar Sesión</string>
    <string name="bfoto">Sacar Foto</string>
    <string name="bsend">Enviar</string>
    <string name="bleoleo">Leo Leo</string>
    <string name="bjuego">Juego con las palabras</string>
    <string name="bescucho">Esucucho mi voz</string>
    <string name="bleoleo1">Leo Leo 1</string>
    <string name="bcomprobar">comprobar</string>
    <string name="bseguimiento">seguimiento</string>
    <string name="bp">p</string>
    <string name="bd">d</string>
    <string name="bb">b</string>
    <string name="badelante">adelante</string>
    <string name="bvolver">volver</string>
    <string name="bguau">guau</string>
    <string name="bmu">mu</string>
    <string name="bplash">plash</string>
    <string name="bring">ring</string>
    <string name="brun">run</string>
    <string name="bmuack">muack</string>
    <string name="bboing">boing</string>

    <string name="bjuego1">Juego con las palabras 1</string>
    <string name="bescucho1">Esucucho mi voz 1</string>
    <string name="bleoleo2">Leo Leo 2</string>
    <string name="bjuego2">Juego con las palabras 2</string>
    <string name="bescucho2">Esucucho mi voz 2</string>
    <string name="bleoleo3">Leo Leo 3</string>
    <string name="bescucho3">Esucucho mi voz 3</string>
    <string name="bfinalizar">Finalizar sesión</string>


    <string name="no_camera">Camara necesaria para ejecutar esta función</string>
    <string name="no_app">Instale una aplicación que pueda usar la camara</string>
    <string name="no_api">Esta versión de Android no soporta esta caracteristica</string>
    <string name="campos">Introduzca los campos requeridos</string>
    <string name="cleoleo1">Leo Leo 1: </string>
    <string name="cleoleo2">Leo Leo 2: </string>
    <string name="cleoleo3">Leo Leo 3: </string>
    <string name="cjuego1">Juego con las palabras 1: </string>
    <string name="cjuego2">Juego con las palabras 2: </string>
    <string name="cescucho3">Escucho mi voz 3: </string>
    <string name="cescucho1">Escucho mi voz 1: </string>
    <string name="cescucho2">Escucho mi voz 2: </string>
    <string name="no">Sin completar</string>
    <string name="si">Completado</string>
    <string name="ayuda">Pide ayuda a quien tengas cerca</string>
    <string name="secuencia">Crea la secuencia con la primera y última sílaba de las palabras que aparecen a continuación</string>

    <string name="hobbys">Aficiones:</string>
    <string name="age">*Edad:</string>
    <string name="surname">*Apellidos:</string>
    <string name="nombre">*Nombre:</string>
    <string name="username">*Nombre de usuario:</string>
    <string name="husername">Introduzca el nombre de usuario</string>
    <string name="contrasena">*Contraseña:</string>
    <string name="hcontrasena">Introduzca la contraseña</string>
    <string name="required">*Campos requeridos</string>
    <string name="fill">Rellene los campos requeridos</string>

    <string name="anewaccount">Cuenta Nueva</string>
    <string name="alogin">Iniciar Sesión</string>
    <string name="amenu">Menú</string>
    <string name="title_activity_pre_escucho3">PreEscucho3</string>
</resources>
