<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/fondo"
    tools:context="eus.ehu.tta.intel.di_educate.Vista.MenuActivity">

    <Button
        android:text="@string/bleoleo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button5"
        android:layout_centerHorizontal="true"
        android:id="@+id/button6"
        android:onClick="leoleo"/>

    <Button
        android:text="@string/bjuego"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/button5"
        android:onClick="juego"/>

    <Button
        android:text="@string/bescucho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button5"
        android:layout_alignRight="@+id/button6"
        android:layout_alignEnd="@+id/button6"
        android:id="@+id/button7"
        android:onClick="escucho"/>

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/bienvenida" />

    <Button
        android:text="@string/bfinalizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:onClick="volver"
        android:id="@+id/button9" />
</RelativeLayout>
