<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_leo_leo1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="eus.ehu.tta.intel.di_educate.LeoLeo1">

    <Button
        android:text="@string/bcomprobar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/comprobar"
        android:onClick="comprobar"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/audio"
        android:visibility="invisible"
        android:id="@+id/foto2"
        android:layout_weight="1"
        android:layout_alignTop="@+id/foto1"
        android:layout_toRightOf="@+id/comprobar"
        android:layout_toEndOf="@+id/comprobar" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/audio"
        android:visibility="invisible"
        android:id="@+id/foto1"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/comprobar"
        android:layout_toStartOf="@+id/comprobar" />

    <Button
        android:text="@string/bp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/foto1"
        android:layout_alignLeft="@+id/foto1"
        android:layout_alignStart="@+id/foto1"
        android:id="@+id/bl1"
        android:onClick="onclick1"/>

    <Button
        android:text="@string/bd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bl1"
        android:layout_alignLeft="@+id/bl1"
        android:layout_alignStart="@+id/bl1"
        android:id="@+id/bl2"
        android:onClick="onclick2"/>

    <Button
        android:text="@string/bp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bl2"
        android:layout_alignRight="@+id/foto2"
        android:layout_alignEnd="@+id/foto2"
        android:id="@+id/bl3"
        android:onClick="onclick3"/>

    <Button
        android:text="@string/bd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bl3"
        android:layout_alignLeft="@+id/bl3"
        android:layout_alignStart="@+id/bl3"
        android:id="@+id/bl4"
        android:onClick="onclick4"/>
</RelativeLayout>
